# hyena-edge

./: .env  .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.ci-utils/: build.hyena-gitlab.sh  prepare-deb-package.sh  push-to-aptly.sh
debian/: changelog  control  copyright  hyena.install
dockerization/: Dockerfile
dockerization/files/: version.sh
hyena-api/: Cargo.toml
hyena-api/src/: api.rs  error.rs  lib.rs
hyena-benchmark/: Cargo.toml
hyena-benchmark/benches/: benches.rs  config.rs
hyena-benchmark/benches/scan/: mod.rs  numeric.rs  string.rs
hyena-benchmark/benches/scan/string/: data.rs  mod.rs
hyena-bloom-filter/: Cargo.toml
hyena-bloom-filter/src/: bloom.rs  bloom_filter.rs  bloom_value.rs  lib.rs  ngram.rs
hyena-common/: Cargo.toml
hyena-common/src/: error.rs  iter.rs  lib.rs  libc.rs  lock.rs  macros.rs  map_type.rs  serde_utils.rs
hyena-common/src/collections/: hash.rs  hash_map.rs  hash_set.rs  mod.rs
hyena-common/src/ty/: mod.rs  regex.rs  timestamp.rs  uuid.rs  value.rs
hyena-engine/: Cargo.toml
hyena-engine/benches/: config.rs  scan.rs
hyena-engine/benches/scan/: mod.rs
hyena-engine/src/: api.rs  catalog.rs  debug.rs  error.rs  helpers.rs  huuid.rs  lib.rs  libc_utils.rs  params.rs  partition.rs  serde_utils.rs
hyena-engine/src/api/: mod.rs  old.rs
hyena-engine/src/block/: macros.rs  mod.rs  relative.rs  string.rs
hyena-engine/src/block/index/: bloom.rs  mod.rs
hyena-engine/src/block/numeric/: dense.rs  mod.rs  sparse.rs  timestamp.rs
hyena-engine/src/datastore/: catalog.rs  column.rs  mod.rs  partition.rs  partition_group.rs  partition_meta.rs
hyena-engine/src/datastore/tests/: append.rs  mod.rs  scan.rs
hyena-engine/src/fs/: hole_punch.rs  mod.rs
hyena-engine/src/helpers/: block.rs  flame.rs  lock.rs  mod.rs  perf.rs  random.rs  seq.rs  table.rs  tempfile.rs
hyena-engine/src/mutator/: append.rs  mod.rs
hyena-engine/src/scanner/: mod.rs
hyena-engine/src/storage/: file.rs  manager.rs  map_type.rs  memory.rs  mmap.rs  mod.rs
hyena-engine/src/ty/: basic.rs  fragment.rs  mod.rs  sparse_iter.rs  timestamp.rs  value.rs
hyena-engine/src/ty/block/: memory.rs  mmap.rs  mod.rs  numeric.rs  ty_impl.rs
hyena-engine/src/ty/index/: memory.rs  mmap.rs  mod.rs  ty_impl.rs
hyena-engine/tests/: catalog.rs  common.rs  large.rs  scan.rs
hyena-test/: Cargo.toml
hyena-test/src/: helpers.rs  lib.rs  random.rs  seq.rs  string.rs  tempfile.rs
src/: cli.rs  main.rs  nanoserver.rs
