[package]
authors = [
        "Przemyslaw M. Maciolek <pmm@collective-sense.com>",
        "Jacek Całusiński <forger@forger.pl>",
        "Tomasz Barański <tomasz.baranski@collective-sense.com>"
]
name = "hyena"
version = "0.1.0"

[workspace]

[dependencies]
clap = "2.29.0"
flexi_logger = "0.6.11"
log = "0.4.1"
dotenv = "0.10.1"
futures = "0.1.17"
tokio-core = "0.1.11"
bytes = "0.4.5"
tokio-io = "0.1.4"
tokio-proto = "0.1.1"
tokio-service = "0.1.0"
bincode = "0.9.2"

[dependencies.hyena-engine]
optional = false
path = "hyena-engine"

[dependencies.hyena-common]
optional = false
path = "hyena-common"

[dependencies.hyena-test]
optional = false
path = "hyena-test"

[dependencies.hyena-api]
optional = false
path = "hyena-api"

[dependencies.colored_logger]
git = "ssh://git@github.com/FCG-LLC/colored_logger.git"
optional = false

[dependencies.nanomsg]
git = "ssh://git@github.com/FCG-LLC/nanomsg-rs.git"

[dependencies.nanomsg-tokio]
git = "ssh://git@github.com/FCG-LLC/nanomsg-tokio.git"
optional = false
