[package]
authors = [
        "Przemyslaw M. Maciolek <pmm@collective-sense.com>",
        "Jacek Całusiński <forger@forger.pl>",
        "Tomasz Barański <tomasz.baranski@collective-sense.com>"
]
name = "hyena"
version = "0.1.0"

[workspace]

[dependencies]
clap = "2.29.4"
flexi_logger = "0.6.11"
log = "0.4.1"
dotenv = "0.10.1"
futures = "0.1.18"
tokio-core = "0.1.12"
bytes = "0.4.6"
bincode = "0.9.2"
nanomsg-multi-server = { git = "ssh://git@gitlab.cs.int/rust/nanomsg-multi.git" }

[dependencies.hyena-engine]
optional = false
path = "hyena-engine"

[dependencies.hyena-common]
optional = false
path = "hyena-common"

[dependencies.hyena-test]
optional = false
path = "hyena-test"

[dependencies.hyena-api]
optional = false
path = "hyena-api"

[dependencies.colored_logger]
git = "ssh://git@gitlab.cs.int/rust/colored-logger.git"
optional = false

[dependencies.nanomsg]
git = "ssh://git@gitlab.cs.int/rust/nanomsg-rs.git"

[dependencies.nanomsg-tokio]
git = "ssh://git@gitlab.cs.int/rust/nanomsg-tokio.git"
optional = false

[features]
default = []
nightly = ["hyena-common/nightly", "hyena-engine/nightly"]
