[package]
name = "hyena-api"
version = "0.1.0"
authors = [
    "Tomasz Barański <tomasz.baranski@collective-sense.com>",
    "Jacek Całusiński <forger@forger.pl>"
]

[dependencies]
clap = {version = "2.29.4", optional = true}
failure = "0.1.1"
bincode = "0.9.2"
extprim = "1.4.0"
hyena-common = { path = "../hyena-common" }
hyena-engine = { path = "../hyena-engine" }
serde = "1.0.27"
serde_derive = "1.0.27"
log = "0.4.1"
regex = {version = "0.2", optional = true}

[dev-dependencies]
hyena-test = { path = "../hyena-test" }

[features]
parse_msg = ["regex", "clap"]

[[bin]]
name = "parse_msg"
required-features = ["parse_msg"]
