[package]
name = "hyena-api"
version = "0.1.0"
authors = [
    "Tomasz Barański <tomasz.baranski@collective-sense.com>",
    "Jacek Całusiński <forger@forger.pl>"
]
edition = "2018"

[dependencies]
clap = {version = "2.29.4", optional = true}
failure = "0.1.1"
bincode = "0.9.2"
extprim = "1.4.0"
hyena-common = { path = "../hyena-common" }
hyena-engine = { path = "../hyena-engine" }
serde = "1.0.27"
serde_derive = "1.0.27"
log = "0.4.1"
regex = {version = "0.2", optional = true}
rand = {version = "0.4", optional = true}
nanomsg-multi-server = { git = "ssh://git@gitlab.cs.int/rust/nanomsg-multi.git", optional = true }

[dependencies.uuid]
features = [
    "serde",
    "v4",
]
optional = true
version = "0.5.1"


[dev-dependencies]
hyena-test = { path = "../hyena-test" }

[features]
parse_msg = ["regex", "clap", "nanomsg-multi-server"]
gen_test_out = ["clap", "rand", "uuid", "nanomsg-multi-server"]

[[bin]]
name = "parse_msg"
required-features = ["parse_msg"]

[[bin]]
name = "gen_test_out"
required-features = ["gen_test_out"]
