[package]
name = "hyena-common"
version = "0.1.0"
authors = ["Jacek Całusiński <forger@forger.pl>"]

[dependencies]
bincode = "0.9.2"
chrono = "0.4.0"
extprim = "1.4.0"
failure = "0.1.1"
cfg-if = "0.1.2"
serde = "1.0.27"
serde_derive = "1.0.27"
num = "0.1.41"
rand = "0.4.1"
fxhash = "0.2.1"
rayon = "1.0.1"

[dependencies.uuid]
features = [
    "serde",
    "v4",
]
optional = false
version = "0.5.1"

[features]
default = []
nightly = []
