[package]
authors = [
    "Przemyslaw M. Maciolek <pmm@collective-sense.com>",
    "Jacek Całusiński <forger@forger.pl>",
]
name = "hyena-engine"
version = "0.1.0"

[dependencies]
bincode = "0.9.2"
cfg-if = "0.1.2"
chrono = "0.4.0"
log = "0.4.0"
rayon = "0.9.0"
serde = "1.0.26"
serde_derive = "1.0.26"
static_assertions = "0.2.5"
extprim = "1.4.0"
byteorder = "1.2.1"
failure = "0.1.1"
failure_derive = "0.1.1"

[dependencies.flame]
git = "https://github.com/TyOverby/flame.git"

[dependencies.libc]
optional = true
version = "0.2.34"

[dependencies.memmap]
version = "0.6.1"
optional = true

[dependencies.uuid]
features = [
    "serde",
    "v4",
]
optional = false
version = "0.5.1"

[dev-dependencies]
num = "0.1.41"
prettytable-rs = "0.6.7"
rand = "0.4.1"
term = "0.4.6"
hyena-test = { path = "../hyena-test" }

[features]
default = [
    "hole_punching",
    "mmap",
]
hole_punching = ["libc"]
mmap = ["memmap"]
nightly = []
perf = []
