[package]
authors = [
    "Przemyslaw M. Maciolek <pmm@collective-sense.com>",
    "Jacek Całusiński <forger@forger.pl>",
    "Tomasz Barański <tomasz.baranski@collective-sense.com>"
]
name = "hyena-engine"
version = "0.1.0"

[[bench]]
name = "scan"
harness = false

[dependencies]
cfg-if = "0.1.2"
chrono = "0.4.0"
log = "0.4.1"
rayon = "1.0.1"
serde = "1.0.27"
serde_derive = "1.0.27"
static_assertions = "0.2.5"
extprim = "1.4.0"
failure = "0.1.1"
failure_derive = "0.1.1"
hyena-common = { path = "../hyena-common" }
hyena-bloom-filter = { path = "../hyena-bloom-filter" }
strum = "0.8.0"
strum_macros = "0.8.0"

[dependencies.libc]
optional = true
version = "0.2.34"

[dependencies.memmap]
version = "0.6.1"
optional = true

[dependencies.uuid]
features = [
    "serde",
    "v4",
]
optional = false
version = "0.5.1"

[dependencies.prettytable-rs]
optional = true
version = "0.7.0"

[dependencies.term]
optional = true
version = "0.5.1"

[dev-dependencies]
num = "0.1.41"
rand = "0.4.1"
hyena-test = { path = "../hyena-test" }
criterion = "0.2.0"

[features]
default = [
    "hole_punching",
    "mmap",
]
hole_punching = ["libc"]
mmap = ["memmap"]
persistent_test_data = ["hyena-test/persistent_test_data"]
nightly = []
perf = []
debug = ["prettytable-rs", "term"]
validate_append = []
