[package]
name = "hyena-test"
version = "0.1.0"
authors = ["Jacek Całusiński <forger@forger.pl>"]

[dependencies]
chrono = "0.4.0"
tempdir = "0.3.5"
num = "0.1.41"
rand = "0.4.1"
failure = "0.1.1"
hyena-common = { path = "../hyena-common" }

[dependencies.flame]
version = "0.2.0"
optional = true

[features]
default = []
perf = ["flame"]
